--- a/02/index.html
+++ b/02/index.html
@@ -1,29 +1,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>自作ﾃﾞｪｪｪｪﾝ</title>
+    <title>自分的備忘録-2[技術]</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="../glasses.png">
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
     <style>
-      body { background : #000 }
-      h1 { font-size : 40px }
-      h2 { font-size : 35px ; color : #ffd700}
-      #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 25px ; color : #00f}
-      a { font-size : 25px ; color : #cd0000 }
-      </style>
+        body { background : #ffd }
+        #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
+        .to_center { text-align : center }
+    </style>
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Keiのブログ | HOME</h1></a>
+    <a href="https://kei-glasses.github.io/HTML/00"><h1>Kei備忘録</h1></a>
     <div id="table">
+      <a href="#a">・共産趣味…?</a>
+      <a href="#b">・なぜこれを選んだのか</a>
+      <a href="#c">・音源</a>
+      <a href="#d">・ライセンス</a>
+      <a href="#e">・権利関連</a>
     </div>
-    <h1 id="b">使用音源一覧</h1>
-    
-    <h2>・USSR Anthem - 1977.ogg</h2>
-    <audio controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
-    <p><a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">USSR Anthem - 1977.ogg</a>,<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, <a>ウィキメディア・コモンズ経由で</a></p>
+    <h1 id="a">共産趣味…?</h1>
+    <p>Keiブログ2ページ目に選んだのはまさかのソ連国歌</p>
+    <p>「約一年ぶりに更新したと思ったらどんな内容だよ…。」</p>
+    <p>そんな声が聞こえてきそうですが、クリエイティブ・コモンズ等の</p>
+    <p>権利関係の勉強にもなったので、自分なりにページをまとめておこうと思います</p>
+    <h1 id="b">なぜこれを選んだのか</h1>
+    <p>Wikipeidaより</p>
+    <ol>
+      <li>1944年のソ連国歌(スターリン時代)</li>
+      <li>1955年のソ連国歌(歌詞なしVer.)</li>
+      <li>1977年のソ連国歌(おなじみの)</li>
+      <li>1977年のソ連国歌(演奏版)</li>
+    </ol>
+    <p>を、DLし、ﾃﾞｪｪｪｪﾝの部分のみを合わせて、</p>
+    <p>自作ﾃﾞｪｪｪｪﾝ音源を制作しました。</p>
+    <p>なぜ公開するのか？</p>
+    <p>実は3つ目のファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されていました</p>
+    <p>このライセンスを表示するために簡単だったのが、このページに記載することだったのです</p>
+    <p>「そのついでに公開するか」と思ったのがこの記事の起こりですかね</p>
+    <h1 id="c">音源</h1>
+    <audio controls src="./ﾃﾞｪｪｪｪﾝ.mp3"></audio>
+    <p>もとの音源4ファイルのいらない部分を切り取り、合成したため</p>
+    <p>このファイルはもとのファイルを改変した派生物にあたります</p>
+    <p>継承(SA)がついているためこのファイルにもクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されます</p>
+    <p>本当にしょうもない作品ですが、残しておきましょう(笑)</p>
+    <p>どこからか、<a href="https://www.youtube.com/watch?v=OLkjom7D22c&t=83s">「音声で遊ばない」</a>と聞こえてきますね</p>
+    <h1 id="d">ライセンス</h1>
+    <p>前項で説明した通り、このファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与していますので</p>
+    <p>ここに表記しておきます</p>
+    <div class="code">
+    <div class="to_center">
+    <p><a href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">ﾃﾞｪｪｪｪﾝ.mp3</font></font></a><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">© 2025 by</font></font><a href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Keiは</font></font></a><font dir="auto" style="vertical-align: inherit;"><a href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;">CC BY-SA 4.0</font></a><font dir="auto" style="vertical-align: inherit;">に基づいてライセンスされています</font></font><a href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;"></font></a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+    <p>この作品の著作権者である私は、この作品を以下のライセンスで提供します。</p>
+    <p>このファイルはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスのもとに利用を許諾されています。</p>
+    <p>あなたは以下の条件に従う場合に限り、自由に</p>
+    <p>・共有 - 本作品を複製、頒布、展示、実演できます。</p>
+    <p>・再構成 - 二次的著作物を作成できます。</p>
+    <p>あなたの従うべき条件は以下の通りです。</p>
+    <p>・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
+    <p>これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
+    <p>・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
+    <p>元の作品と<a href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
+    </div>
+    <h1 id="e">権利関連</h1>
+    <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
+    <p>ロシア連邦民法第230-FZ号第4巻第1259条により著作権の対象ではない他のファイルも一応勉強のために表記させていただきます</p>
+    <h2>・1944年のソ連国歌(スターリン時代)</h2>
+    <h2>・1955年のソ連国歌(歌詞なしVer.)</h2>
+    <h2>・1977年のソ連国歌(おなじみの)</h2>
+    <h2>・1977年のソ連国歌(演奏版)</h2>
   </body>
 </html>
