--- a/02/index.html
+++ b/02/index.html
@@ -72,5 +72,12 @@
     <h2>・1955年のソ連国歌(歌詞なしVer.)</h2>
     <h2>・1977年のソ連国歌(おなじみの)</h2>
     <h2>・1977年のソ連国歌(演奏版)</h2>
+    <h1 id="f">まとめ</h1>
+    <p>これで作成したファイルの権利問題を解決できました</p>
+    <p>みなさんも権利関係にはご注意を</p>
+    <p>では、この辺で。</p>
+    <div style=background:#ffd700>
+    <a href="https://kei-glasses.github.io/HTML/00">HOMEへ</a>
+    </div>
   </body>
 </html>
