--- a/02/index.html
+++ b/02/index.html
@@ -16,10 +16,10 @@
     <script src="../foreground.js"></script>
     <a href="https://kei-glasses.github.io/HTML/00"><h1>Kei備忘録</h1></a>
     <div id="table">
-      <a href="#a">・共産趣味…?</a>
-      <a href="#b">・なぜこれを選んだのか</a>
-      <a href="#c">・音源</a>
-      <a href="#d">・ライセンス</a>
+      <a href="#a">・共産趣味…?</a><br>
+      <a href="#b">・なぜこれを選んだのか</a><br>
+      <a href="#c">・音源</a><br>
+      <a href="#d">・ライセンス</a><br>
       <a href="#e">・権利関連</a>
     </div>
     <h1 id="a">共産趣味…?</h1>
