--- a/02/index.html
+++ b/02/index.html
@@ -20,7 +20,7 @@
       <a href="#b">・なぜこれを選んだのか</a><br>
       <a href="#c">・音源</a><br>
       <a href="#d">・ライセンス</a><br>
-      <a href="#e">・権利関連</a>
+      <a href="#e">・権利関連</a><br>
     </div>
     <h1 id="a">共産趣味…?</h1>
     <p>Keiブログ2ページ目に選んだのはまさかのソ連国歌</p>
