--- a/02/index.html
+++ b/02/index.html
@@ -46,7 +46,7 @@
     <p>このファイルはもとのファイルを改変した派生物にあたります</p>
     <p>継承(SA)がついているためこのファイルにもクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されます</p>
     <p>本当にしょうもない作品ですが、残しておきましょう(笑)</p>
-    <p>どこからか、<a href="https://www.youtube.com/watch?v=OLkjom7D22c&t=83s" target="_blank">「音声で遊ばない」</a>と聞こえてきますね</p>
+    <p>どこからか、<a style="font-size : 40px" href="https://www.youtube.com/watch?v=OLkjom7D22c&t=83s" target="_blank">「音声で遊ばない」</a>と聞こえてきますね</p>
     <h1 id="d">ライセンス</h1>
     <p>前項で説明した通り、このファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与していますので</p>
     <p>ここに表記しておきます</p>
