--- a/02/index.html
+++ b/02/index.html
@@ -61,7 +61,7 @@
     <p>・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
     <p>これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
     <p>・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
-    <p>元の作品と<a href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
+    <p style="font-size : 40px">元の作品と<a href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
     </div>
     <h1 id="e">権利関連</h1>
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
