--- a/02/index.html
+++ b/02/index.html
@@ -41,7 +41,7 @@
     <p>このライセンスを表示するために簡単だったのが、このページに記載することだったのです</p>
     <p>「そのついでに公開するか」と思ったのがこの記事の起こりですかね</p>
     <h1 id="c">音源</h1>
-    <p style="font-size : 40px"><audio controls src="./ﾃﾞｪｪｪｪﾝ.mp3"></audio></p>
+    <p style="font-size : 40px"><audio class="to_center" controls src="./ﾃﾞｪｪｪｪﾝ.mp3"></audio></p>
     <p>もとの音源4ファイルのいらない部分を切り取り、合成したため</p>
     <p>このファイルはもとのファイルを改変した派生物にあたります</p>
     <p>継承(SA)がついているためこのファイルにもクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されます</p>
@@ -67,16 +67,16 @@
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
     <p>ロシア連邦民法第230-FZ号第4巻第1259条により著作権の対象ではない他のファイルも一応勉強のために表記させていただきます</p>
     <h2>・1944年のソ連国歌(スターリン時代)</h2>
-      <audio controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio>
+      <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio>
       <a href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons
     <h2>・1955年のソ連国歌(歌詞なしVer.)</h2>
-      <audio controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio>
+      <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio>
       <a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons
     <h2>・1977年のソ連国歌(おなじみの)</h2>
-      <audio controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
+      <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
       <a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
     <h2>・1977年のソ連国歌(演奏版)</h2>
-      <audio controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio>
+      <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio>
       <a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
