--- a/02/index.html
+++ b/02/index.html
@@ -61,23 +61,23 @@
     <p>・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
     <p>これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
     <p>・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
-    <p style="font-size : 40px">元の作品と<a href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
+    <p>元の作品と<a style="font-size : 40px" href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
     </div>
     <h1 id="e">権利関連</h1>
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
     <p>ロシア連邦民法第230-FZ号第4巻第1259条により著作権の対象ではない他のファイルも一応勉強のために表記させていただきます</p>
     <h2>・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio>
-      <a href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons
+      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons
     <h2>・1955年のソ連国歌(歌詞なしVer.)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio>
-      <a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons
+      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons
     <h2>・1977年のソ連国歌(おなじみの)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
-      <a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
+      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
     <h2>・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio>
-      <a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons
+      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
     <p>みなさんも権利関係にはご注意を</p>
