--- a/00/index.html
+++ b/00/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Keiのブログ | HOME</title>
-        <meta charset="UTF-8">
+        <title>Keiのブログ
         <link rel="stylesheet" href="../style.css">
         <link rel="icon" href="../glasses.png">
         <script src="../background.js"></script>
@@ -13,7 +12,7 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Keiのブログ | HOME</h1></a>
+        <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Keiのブログ</h1></a>
         <div id="table">
             <a href="#a">・Keiブログとは</a><br>
             <a href="#b">・運営者紹介</a><br>
