--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Keiのブログ | 404</title>
+        <title>404</title>
         <meta charset="UTF-8">
         <link rel="icon" href="../glasses.png">
         <style>
