--- a/02/index.html
+++ b/02/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00"><h1>Kei備忘録</h1></a>
+    <a style="color : #000" href="https://kei-glasses.github.io/HTML/00"><h1>Kei備忘録</h1></a>
     <div id="table">
       <a href="#a">・共産趣味…?</a><br>
       <a href="#b">・なぜこれを選んだのか</a><br>
