--- a/02/index.html
+++ b/02/index.html
@@ -66,6 +66,7 @@
     <h1 id="e">権利関連</h1>
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
     <p>ロシア連邦民法第230-FZ号第4巻第1259条により著作権の対象ではない他のファイルも一応勉強のために表記させていただきます</p>
+    <div class="to_center">
     <h2>・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio>
       <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons
@@ -78,6 +79,7 @@
     <h2>・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio>
       <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons
+    </div>
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
     <p>みなさんも権利関係にはご注意を</p>
