--- a/02/index.html
+++ b/02/index.html
@@ -51,17 +51,17 @@
     <p>前項で説明した通り、このファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与していますので</p>
     <p>ここに表記しておきます</p>
     <p><a  style="font-size : 40px" href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">ﾃﾞｪｪｪｪﾝ.mp3</font></font></a><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">© 2025 by</font></font><a  style="font-size : 40px" href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Keiは</font></font></a><font dir="auto" style="vertical-align: inherit;"><a  style="font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;">CC BY-SA 4.0</font></a><font dir="auto" style="vertical-align: inherit;">に基づいてライセンスされています</font></font><a  style="font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;"></font></a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
-    <div class="code" style=" font-size : 35px">
-    <p>この作品の著作権者である私は、この作品を以下のライセンスで提供します。</p>
-    <p>このファイルはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスのもとに利用を許諾されています。</p>
-    <p>あなたは以下の条件に従う場合に限り、自由に</p>
-    <p>・共有 - 本作品を複製、頒布、展示、実演できます。</p>
-    <p>・再構成 - 二次的著作物を作成できます。</p>
-    <p>あなたの従うべき条件は以下の通りです。</p>
-    <p>・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
-    <p>これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
-    <p>・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
-    <p>元の作品と<a style="font-size : 40px" href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
+    <div class="code">
+    <p style="font-size : 35px">この作品の著作権者である私は、この作品を以下のライセンスで提供します。</p>
+    <p style="font-size : 35px">このファイルはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスのもとに利用を許諾されています。</p>
+    <p style="font-size : 35px">あなたは以下の条件に従う場合に限り、自由に</p>
+    <p style="font-size : 35px">・共有 - 本作品を複製、頒布、展示、実演できます。</p>
+    <p style="font-size : 35px">・再構成 - 二次的著作物を作成できます。</p>
+    <p style="font-size : 35px">あなたの従うべき条件は以下の通りです。</p>
+    <p style="font-size : 35px">・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
+    <p style="font-size : 35px">これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
+    <p style="font-size : 35px">・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
+    <p style="font-size : 35px">元の作品と<a style="font-size : 40px" href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
     </div>
     <h1 id="e">権利関連</h1>
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
