--- a/02/index.html
+++ b/02/index.html
@@ -69,16 +69,16 @@
     <div class="to_center">
     <h2>・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio><br>
-      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons
+      <p><a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons</p>
     <h2>・1955年のソ連国歌(歌詞なしVer.)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio><br>
-      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons
+      <p><a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons</p>
     <h2>・1977年のソ連国歌(おなじみの)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio><br>
-      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons
+      <p><a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</p>
     <h2>・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio><br>
-      <a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons
+      <p><a style="font-size : 40px" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons</p>
     </div>
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
