--- a/02/index.html
+++ b/02/index.html
@@ -58,7 +58,7 @@
     <p style="font-size : 35px">・共有 - 本作品を複製、頒布、展示、実演できます。</p>
     <p style="font-size : 35px">・再構成 - 二次的著作物を作成できます。</p>
     <p style="font-size : 35px">あなたの従うべき条件は以下の通りです。</p>
-    <p style="font-size : 35px">・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨をしめさなければなりません。</p>
+    <p style="font-size : 35px">・表示 - あなたは適切なクレジットを表示し、ライセンスへのリンクを提供し、変更があったらその旨を示さなければなりません。</p>
     <p style="font-size : 35px">これらは合理的であればどのような方法で行っても構いませんが、許諾者があなたやあなたの利用行為を支持していると示唆するような方法は除きます。</p>
     <p style="font-size : 35px">・継承 - もしあなたがこの作品をリミックスしたり、改変したり、加工した場合には、あなたはあなたの貢献部分を</p>
     <p style="font-size : 35px">元の作品と<a style="font-size : 40px" href="https://creativecommons.org/share-your-work/licensing-considerations/compatible-licenses">これと同一または互換性があるライセンス</a>の下に頒布しなければなりません。</p>
