--- a/02/index.html
+++ b/02/index.html
@@ -42,6 +42,7 @@
     <p>「そのついでに公開するか」と思ったのがこの記事の起こりですかね</p>
     <h1 id="c">音源</h1>
     <p style="font-size : 40px ; text-align : center"><audio class="to_center" controls src="./ﾃﾞｪｪｪｪﾝ.mp3"></audio></p>
+    <p>ダウンロードは<a download="./ﾃﾞｪｪｪｪﾝ.mp3">こちら</a>から</p>
     <p>もとの音源4ファイルのいらない部分を切り取り、合成したため</p>
     <p>このファイルはもとのファイルを改変した派生物にあたります</p>
     <p>継承(SA)がついているためこのファイルにもクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されます</p>
