--- a/02/index.html
+++ b/02/index.html
@@ -68,24 +68,28 @@
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
     <h2 style="color : #ffd700">・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio><br>
+      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p><a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a>, Public domain, via Wikimedia Commons</p>
     </div>
     <br>
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
       <h2 style="color : #ffd700">・1955年のソ連国歌(歌詞なしVer.)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio><br>
+      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p><a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a>, Public domain, via Wikimedia Commons</p>
     </div>
       <br>
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
       <h2 style="color : #ffd700">・1977年のソ連国歌(おなじみの)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio><br>
+      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p><a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a style="color : white; font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</p>
     </div>
     <br>
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
       <h2 style="color : #ffd700">・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio><br>
+      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p><a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a>, Public domain, via Wikimedia Commons</p>
     </div>
     <h1 id="f">まとめ</h1>
