--- a/02/index.html
+++ b/02/index.html
@@ -69,6 +69,8 @@
     <h2 style="color : #ffd700">・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga">https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga</a></p>
       <p>ファイル名：Gimn Sovetskogo Soyuza (1944 Stalinist lyrics).oga</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
@@ -78,7 +80,9 @@
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
       <h2 style="color : #ffd700">・1955年のソ連国歌(歌詞なしVer.)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio><br>
-      <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">See page for author</a></p>
+      <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">著者のページを参照</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></a>https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg</p>
       <p>ファイル名：Soviet Anthem Instrumental 1955.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
@@ -89,6 +93,8 @@
       <h2 style="color : #ffd700">・1977年のソ連国歌(おなじみの)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg"></a>https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
       <p>ファイル名：USSR Anthem - 1977.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：<a style="color : white; font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a></p>
@@ -99,6 +105,8 @@
       <h2 style="color : #ffd700">・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg">https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg</a></p>
       <p>ファイル名：Soviet Anthem Instrumental.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
