--- a/02/index.html
+++ b/02/index.html
@@ -112,6 +112,8 @@
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
+    <br>
+    <p>※上のリンクが破損している場合は<a herf="https://github.com/kei-glasses/HTML/02/url.txt">URL.txt</a>を確認し直接リンクアドレスよりアクセスしてください</p>
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
     <p>みなさんも権利関係にはご注意を</p>
