--- a/02/index.html
+++ b/02/index.html
@@ -69,8 +69,8 @@
     <h2 style="color : #ffd700">・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">Red Army choirs</a></p>
-      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga</a></p>
-      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga">https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">この場所</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga">この場所</a></p>
       <p>ファイル名：Gimn Sovetskogo Soyuza (1944 Stalinist lyrics).oga</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
@@ -81,8 +81,8 @@
       <h2 style="color : #ffd700">・1955年のソ連国歌(歌詞なしVer.)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">著者のページを参照</a></p>
-      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg</a></p>
-      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg"></a>https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg</p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">この場所</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg">この場所</a></p>
       <p>ファイル名：Soviet Anthem Instrumental 1955.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
@@ -93,8 +93,8 @@
       <h2 style="color : #ffd700">・1977年のソ連国歌(おなじみの)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a></p>
-      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg"></a>https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</p>
-      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">この場所</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">この場所</a></p>
       <p>ファイル名：USSR Anthem - 1977.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：<a style="color : white; font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a></p>
@@ -105,15 +105,13 @@
       <h2 style="color : #ffd700">・1977年のソ連国歌(演奏版)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg"></audio><br>
       <p>作者：<a style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">Olo 19</a></p>
-      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg</a></p>
-      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg">https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg</a></p>
+      <p>ページURL：<a href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">この場所</a></p>
+      <p>ファイルURL：<a href="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg">この場所</a></p>
       <p>ファイル名：Soviet Anthem Instrumental.ogg</p>
       <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
-    <br>
-    <p>※上のリンクが破損している場合は<a herf="https://github.com/kei-glasses/HTML/02/url.txt">URL.txt</a>を確認し直接リンクアドレスよりアクセスしてください</p>
     <h1 id="f">まとめ</h1>
     <p>これで作成したファイルの権利問題を解決できました</p>
     <p>みなさんも権利関係にはご注意を</p>
