--- a/00/index.html
+++ b/00/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Keiのブログ
+        <title>Keiのブログ</title>
         <link rel="stylesheet" href="../style.css">
         <link rel="icon" href="../glasses.png">
         <script src="../background.js"></script>
