--- a/02/index.html
+++ b/02/index.html
@@ -72,7 +72,8 @@
       <p>ページURL：<a target="_blank" href="https://commons.wikimedia.org/wiki/File:Gimn_Sovetskogo_Soyuza_(1944_Stalinist_lyrics).oga">この場所</a></p>
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga">この場所</a></p>
       <p>ファイル名：Gimn Sovetskogo Soyuza (1944 Stalinist lyrics).oga</p>
-      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>年：1944年</p>
+      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -83,8 +84,9 @@
       <p>作者：<a target="_blank" style="font-size : 40px ; color : white" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">著者のページを参照</a></p>
       <p>ページURL：<a target="_blank" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental_1955.ogg">この場所</a></p>
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/5/55/Soviet_Anthem_Instrumental_1955.ogg">この場所</a></p>
+      <p>年：1955年</p>
       <p>ファイル名：Soviet Anthem Instrumental 1955.ogg</p>
-      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -96,7 +98,8 @@
       <p>ページURL：<a target="_blank" href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">この場所</a></p>
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">この場所</a></p>
       <p>ファイル名：USSR Anthem - 1977.ogg</p>
-      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>年：1977年</p>
+      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：<a style="color : white; font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a></p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -108,7 +111,8 @@
       <p>ページURL：<a target="_blank" href="https://commons.wikimedia.org/wiki/File:Soviet_Anthem_Instrumental.ogg">この場所</a></p>
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg">この場所</a></p>
       <p>ファイル名：Soviet Anthem Instrumental.ogg</p>
-      <p>改変内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>年：おそらく1977年</p>
+      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
