--- a/02/index.html
+++ b/02/index.html
@@ -65,6 +65,7 @@
     <h1 id="e">権利関連</h1>
     <p>ここからが本題で、使わせていただいたもののクレジットを表記していきます</p>
     <p>ロシア連邦民法第230-FZ号第4巻第1259条により著作権の対象ではない他のファイルも一応勉強のために表記させていただきます</p>
+    <p>Wikimedia(ファイルの詳細が記されたページ)の情報をもとに記載しています</p>
     <div class="to_center" style="background : #cd0000 ; color : #ffd700">
     <h2 style="color : #ffd700">・1944年のソ連国歌(スターリン時代)</h2>
       <audio  class="to_center" controls src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga"></audio><br>
