--- a/02/index.html
+++ b/02/index.html
@@ -27,6 +27,7 @@
     <p>そんな声が聞こえてきそうですが、クリエイティブ・コモンズ等の</p>
     <p>権利関係の勉強にもなったので、自分なりにページをまとめておこうと思います</p>
     <h1 id="b">なぜこれを選んだのか</h1>
+    <img src="./ソ連国旗.svg" alt="ソ連国旗" width="100%" height="auto">
     <p>Wikipeidaより</p>
     <ol>
       <li>1944年のソ連国歌(スターリン時代)</li>
