--- a/02/index.html
+++ b/02/index.html
@@ -51,7 +51,7 @@
     <p>本当にしょうもない作品ですが、残しておきましょう(笑)</p>
     <p>どこからか、<a style="font-size : 40px" href="https://www.youtube.com/watch?v=OLkjom7D22c&t=83s" target="_blank">「音声で遊ばない」</a>と聞こえてきますね</p>
     <h1 id="d">ライセンス</h1>
-    <p>前項で説明した通り、このファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与していますので</p>
+    <p>前項で説明した通り、このファイルにはクリエイティブ・コモンズ 表示-継承 4.0 国際ライセンスが付与されていますので</p>
     <p>ここに表記しておきます</p>
     <p><a  style="font-size : 40px" href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">ﾃﾞｪｪｪｪﾝ.mp3</font></font></a><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">© 2025 by</font></font><a  style="font-size : 40px" href="https://creativecommons.org"><font dir="auto" style="vertical-align: inherit;"><font dir="auto" style="vertical-align: inherit;">Keiは</font></font></a><font dir="auto" style="vertical-align: inherit;"><a  style="font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;">CC BY-SA 4.0</font></a><font dir="auto" style="vertical-align: inherit;">に基づいてライセンスされています</font></font><a  style="font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0/"><font dir="auto" style="vertical-align: inherit;"></font></a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
     <div class="code">
