--- a/02/index.html
+++ b/02/index.html
@@ -20,6 +20,7 @@
       <a href="#c">・音源</a><br>
       <a href="#d">・ライセンス</a><br>
       <a href="#e">・権利関連</a><br>
+      <a href="#f">・まとめ</a><br>
     </div>
     <br>
     <img src="./ソ連国旗.svg" alt="ソ連国旗" width="100%" height="auto">
