--- a/02/index.html
+++ b/02/index.html
@@ -77,7 +77,7 @@
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/9/9c/Gimn_Sovetskogo_Soyuza_%281944_Stalinist_lyrics%29.oga">この場所</a></p>
       <p>ファイル名：Gimn Sovetskogo Soyuza (1944 Stalinist lyrics).oga</p>
       <p>日付：1949年</p>
-      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>変更内容：ファイル名の変更  この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -91,7 +91,7 @@
       <p>作成日：1944年</p>
       <p>公演日：1968年頃</p>
       <p>ファイル名：Soviet Anthem Instrumental 1955.ogg</p>
-      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>変更内容：ファイル名の変更  oggからmp3への変換  この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -104,7 +104,7 @@
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">この場所</a></p>
       <p>ファイル名：USSR Anthem - 1977.ogg</p>
       <p>日付：2022年11月1日</p>
-      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>変更内容：ファイル名の変更  oggからmp3への変換  この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：<a style="color : white; font-size : 40px" href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a></p>
       <p>Wikimedia Commons経由</p>
     </div>
@@ -117,7 +117,7 @@
       <p>ファイルURL：<a target="_blank" href="https://upload.wikimedia.org/wikipedia/commons/2/23/Soviet_Anthem_Instrumental.ogg">この場所</a></p>
       <p>ファイル名：Soviet Anthem Instrumental.ogg</p>
       <p>日付：2022年11月1日</p>
-      <p>変更内容：この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
+      <p>変更内容：ファイル名の変更  oggからmp3への変換  この音源の最初のﾃﾞｪｪｪｪﾝを使用</p>
       <p>ライセンス：Public domain</p>
       <p>Wikimedia Commons経由</p>
     </div>
