--- a/03/index.html
+++ b/03/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>自分的備忘録-3[語学]</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../glasses.png">
+    <script src="../background.js"></script>
+  </head>
+  <body>
+    <script src="../foreground.js"></script>
+    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Kei備忘録</h1></a>
+    <div id="table">
+    </div>
+    <h1 id="a">記事作成にあたって</h1>
+    <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>を素材として二次利用しています。</p>
+  </body>
+</html>
