--- a/03/index.html
+++ b/03/index.html
@@ -13,5 +13,12 @@
     </div>
     <h1 id="a">記事作成にあたって</h1>
     <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>を素材として二次利用しています。</p>
+    <h1 id="b">またロシア…?</h1>
+    <p>前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそうですが、</p>
+    <p>学術的好奇心でキリル文字を学びたいのでこの記事を書いておこうと思います</p>
+    <p>※ロシア語で使用されているキリル文字をまとめた記事となっています</p>
+    <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>をご参照していただきたいです</p>
+    <h1 id="b">一覧表</h1>
+    <p></p>
   </body>
 </html>
