--- a/03/index.html
+++ b/03/index.html
@@ -10,6 +10,8 @@
     <script src="../foreground.js"></script>
     <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Kei備忘録</h1></a>
     <div id="table">
+      <a href="#a">・記事作成にあたって</a><br>
+      <a href="#b">・一覧表</a><br>
     </div>
     <h1 id="a">記事作成にあたって</h1>
     <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>を素材として二次利用しています。</p>
