--- a/03/index.html
+++ b/03/index.html
@@ -19,7 +19,7 @@
       <a href="#b">・一覧表</a><br>
     </div>
     <h1 id="a">記事作成にあたって</h1>
-    <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>を素材として二次利用しています。</p>
+    <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>、<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">「ロシア語のラテン文字表記法」</a>を素材として二次利用しています。</p>
     <h1 id="b">またロシア…?</h1>
     <p>前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそう</p>
     <p>学術的好奇心でキリル文字を学びたいのでこの記事を書いておこうと思います</p>
