--- a/03/index.html
+++ b/03/index.html
@@ -30,7 +30,9 @@
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <div class="border">
-      <p><p> </p><p>大文字</p><p>小文字</p><p>ラテン文字転写</p></p>
+      <p> </p><p>大文字</p><p>小文字</p><p>ラテン文字転写</p><br>
+      <p>А</p><br>
+      <p>Б</p><br>
     </div>
     <p></p>
   </body>
