--- a/03/index.html
+++ b/03/index.html
@@ -21,6 +21,8 @@
     </div>
     <h1 id="a">記事作成にあたって</h1>
     <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>、<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">「ロシア語のラテン文字表記法」</a>を素材として二次利用しています。</p>
+    <p>また、一覧表作成にあたり、<a href="https://tabletag.net/ja/">Table Tag Generator</a>を使用させていただきました</p>
+    <p>素晴らしいシステムを構築してくださった方々に感謝の意を示したいと思います</p>
     <h1 id="b">またロシア…?</h1>
     <p>前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそう</p>
     <p>学術的好奇心でキリル文字を学びたいのでこの記事を書いておこうと思います</p>
@@ -29,11 +31,213 @@
     <h1 id="b">一覧表</h1>
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
-    <div class="border">
-      <p> </p><p>大文字</p><p>小文字</p><p>ラテン文字転写</p><br>
-      <p>А</p><br>
-      <p>Б</p><br>
-    </div>
-    <p></p>
+    <table>
+      <tbody>
+        <tr>
+          <td><&emsp;/td>
+          <td>小文字</td>
+          <td>大文字</td>
+          <td>ラテン文字転写</td>
+        </tr>
+        <tr>
+          <td>А</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Б</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>В</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Г</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Д</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Е</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ж</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>З</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>И</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Й</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>К</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Л</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>М</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Н</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>О</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>П</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Р</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>С</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Т</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>У</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ф</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Х</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ц</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ч</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ш</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Щ</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ъ</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ы</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+                <tr>
+          <td>Ь</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Э</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Ю</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Я</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
