--- a/03/index.html
+++ b/03/index.html
@@ -34,7 +34,7 @@
     <table>
       <tbody>
         <tr>
-          <td><&emsp;</td>
+          <td>&emsp;</td>
           <td>小文字</td>
           <td>大文字</td>
           <td>ラテン文字転写</td>
