--- a/00/index.html
+++ b/00/index.html
@@ -43,7 +43,8 @@
         <p><br><br>...ま、がんばります</p>
         <h1 id="c">記事一覧</h1>
         <a href="https://kei-glasses.github.io/HTML/01">自分的備忘録-1[数学]</a><br>
-        <a href="https://kei-glasses.github.io/HTML/02">自分的備忘録-2[技術]</a>
+        <a href="https://kei-glasses.github.io/HTML/02">自分的備忘録-2[技術]</a><br>
+        <a href="https://kei-glasses.github.io/HTML/03">自分的備忘録-3[語学]</a><br>
         <div class="code">
         <p>このリポジトリは私のウェブサイトがある場所です。管理者: Kei-Glasses。</p>
         </div>
