--- a/03/index.html
+++ b/03/index.html
@@ -24,7 +24,7 @@
     <p>また、一覧表作成にあたり、<a href="https://tabletag.net/ja/">Table Tag Generator</a>を使用させていただきました</p>
     <p>素晴らしいシステムを構築してくださった方々に感謝の意を示したいと思います</p>
     <h1 id="b">またロシア…?</h1>
-    <p>前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそう</p>
+    <p>(前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそう)</p>
     <p>学術的好奇心でキリル文字を学びたいのでこの記事を書いておこうと思います</p>
     <p>※ロシア語で使用されているキリル文字をまとめた記事となっています</p>
     <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>をご参照していただきたいです</p>
