--- a/404.html
+++ b/404.html
@@ -13,6 +13,6 @@
     <body>
       <div style="font-size:100px"><h1>&nbsp;&nbsp;&nbsp;404&nbsp;&nbsp;&nbsp;</h1></div>
       <p>ここにはKeiのページはありません。</p>
-      <p>KeiブログのHOMEは<a href="https://kei-glasses.github.io/HTML/00">こちら</a></p>
+      <p>KeiブログのHOMEは<a href="https://kei-glasses.github.io/00">こちら</a></p>
     </body>
 </html>
