--- a/01/index.html
+++ b/01/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Kei備忘録</h1></a>
+    <a href="https://kei-glasses.github.io//00" style="color:black"><h1>Kei備忘録</h1></a>
     <div id="table">
       <a href="#a">・記念すべき、1ページ目は...</a><br>
       <a href="#b">・7x , 9x</a><br>
@@ -130,7 +130,7 @@
     <p>では、記念すべきKeiブログ1ページ目は、</p>
     <p>この辺で。</p>
     <div style=background:#ffd700>
-      <a href="https://kei-glasses.github.io/HTML/00">HOMEへ</a>
+      <a href="https://kei-glasses.github.io/00">HOMEへ</a>
     </div>
   </body>
 </html>
