--- a/03/index.html
+++ b/03/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Kei備忘録</h1></a>
+    <a href="https://kei-glasses.github.io/00" style="color:black"><h1>Kei備忘録</h1></a>
     <div id="table">
       <a href="#a">・記事作成にあたって</a><br>
       <a href="#b">・一覧表</a><br>
