--- a/03/index.html
+++ b/03/index.html
@@ -10,6 +10,9 @@
         white-space: nowrap;
         border: 2px solid #000;
       }
+      table {
+        border-collapse: collapse;
+      }
     </style>
   </head>
   <body>
@@ -34,10 +37,10 @@
     <table>
       <tbody>
         <tr>
-          <td>&emsp;</td>
-          <td>小文字</td>
-          <td>大文字</td>
-          <td>ラテン文字転写</td>
+          <th>&emsp;</th>
+          <th>小文字</th>
+          <th>大文字</th>
+          <th>ラテン文字転写</th>
         </tr>
         <tr>
           <td>А</td>
