--- a/03/index.html
+++ b/03/index.html
@@ -37,34 +37,19 @@
     <table>
       <tbody>
         <tr style="display:table-cell">
-          <th>&emsp;</th>
-          <th>小文字</th>
-          <th>大文字</th>
-          <th>ラテン文字転写</th>
+          <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
         <tr>
-          <td>А</td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>А</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Б</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Б</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>В</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>В</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Г</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Г</td><td></td><td></td><td></td>
         </tr>
                 <tr>
           <td>Д</td>
@@ -132,59 +117,32 @@
           <td></td>
           <td></td>
         </tr>
-                <tr>
-          <td>П</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>П</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Р</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Р</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>С</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>С</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td></td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Т</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Т</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>У</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>У</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Ф</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Ф</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Х</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Х</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Ц</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Ц</td><td></td><td></td><td></td>
         </tr>
         <tr>
           <td>Ч</td><td></td><td></td><td></td>
