--- a/03/index.html
+++ b/03/index.html
@@ -11,7 +11,7 @@
         border: 2px solid #000;
       }
       #all_table {
-        width: 300px
+        height: 300px
       }
     </style>
   </head>
