--- a/03/index.html
+++ b/03/index.html
@@ -37,7 +37,7 @@
     <table>
       <tbody>
         <div id="all_table">
-        <tr>
+        <tr dir=ltr>
           <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
         <tr>
