--- a/03/index.html
+++ b/03/index.html
@@ -37,7 +37,7 @@
     <table>
       <thead>
         <div id="all_table">
-        <tr dir=ltr>
+        <tr style="display:block;width:100%">
           <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
       </thead>
