--- a/03/index.html
+++ b/03/index.html
@@ -38,7 +38,7 @@
       <thead>
         <div id="all_table">
         <tr">
-          <th style="width=300">&emsp;</th><th style="width=300">小文字</th><th style="width=300">大文字</th><th style="width=300">ラテン文字転写</th>
+          <th style="width:300">&emsp;</th><th style="width:300">小文字</th><th style="width:300">大文字</th><th style="width:300">ラテン文字転写</th>
         </tr>
       </thead>
       <tbody>
