--- a/03/index.html
+++ b/03/index.html
@@ -34,14 +34,10 @@
     <h1 id="b">一覧表</h1>
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
-    <table>
-      <thead>
-        <div id="all_table">
-        <tr">
-          <th style="width:300">&emsp;</th><th style="width:300">小文字</th><th style="width:300">大文字</th><th style="width:300">ラテン文字転写</th>
+    <table border="1">
+        <tr>
+          <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
-      </thead>
-      <tbody>
         <tr>
           <td>А</td><td></td><td></td><td></td>
         </tr>
@@ -141,8 +137,6 @@
         <tr>
           <td>Я</td><td></td><td></td><td></td>
         </tr>
-        </div>
-      </tbody>
     </table>
   </body>
 </html>
