--- a/03/index.html
+++ b/03/index.html
@@ -27,12 +27,12 @@
     <h1 id="b">一覧表</h1>
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
-    <table border="1">
+    <table border="1" style="width: 100%;">
         <tr>
-          <th>&emsp;</th>
-          <th>小文字</th>
-          <th>大文字</th>
-          <th>ラテン文字転写</th>
+          <th style="width: 25%;">&emsp;</th>
+          <th style="width: 25%;">小文字</th>
+          <th style="width: 25%;">大文字</th>
+          <th style="width: 25%;">ラテン文字転写</th>
         </tr>
         <tr>
           <td>А</td><td></td><td></td><td></td>
