--- a/03/index.html
+++ b/03/index.html
@@ -26,7 +26,7 @@
     <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>をご参照していただきたいです</p>
     <h1 id="b">一覧表</h1>
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
-    <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
+    <p>他のラテン文字転写を知りたい場合は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <table border="1" style="width: 100%;text-align:center;">
         <tr>
           <th style="width: 19%;">&emsp;</th>
